--- a/CoffeeMaker/CoffeeMaker.csproj
+++ b/CoffeeMaker/CoffeeMaker.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Pot.cs" />
+    <Compile Include="WarmerPlate.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
