--- a/CoffeeMaker/CoffeeMaker.csproj
+++ b/CoffeeMaker/CoffeeMaker.csproj
@@ -43,11 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Boiler.cs" />
+    <Compile Include="MakerElement.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Pot.cs" />
-    <Compile Include="WarmerPlate.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
